update api and add utils function
